--- a/src/ui/portal/circle-menu/circleMenu.module.css
+++ b/src/ui/portal/circle-menu/circleMenu.module.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   box-shadow: inset 2px 4px 15px rgba(101, 21, 78, 0.6), /* Color más cercano al azul oscuro */
-  0 5px 10px rgba(0, 0, 0, 0.2); /* Sombra externa mucho más leve */
+  0 0px 0px rgba(253, 255, 255, 0.5); /* Sombra externa mucho más leve */
   z-index: 1;
 }
 
@@ -48,24 +48,15 @@
   border-radius: 50%;
   background: none;
   box-shadow: inset 2px 4px 15px rgba(21, 96, 101, 0.6), /* Color más cercano al azul oscuro */
-              0 10px 20px rgba(0, 0, 0, 0.5); /* Sombra externa para profundidad */
+              0 0px 0px rgba(253, 255, 255, 0.5); /* Sombra externa para profundidad */
   filter: blur(5px); /* Difumina ligeramente el borde */
   z-index: 1;
   pointer-events: none;
 }
 
-.shadow {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
-  transform: rotateX(90deg) translateZ(-150px);
-  z-index: -1; 
-}
-
 .text {
   text-align: center;
-  /* font-weight: bold; */
+  /* font-weight: d; */
   color: white;
   overflow: hidden; 
   pointer-events: none;
@@ -95,7 +86,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5), 0 10px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 10px rgba(247, 245, 245, 0.5), 0 10px 15px rgba(255, 255, 255, 0.3);
   z-index: 1;
 }
 
@@ -123,7 +114,7 @@
   border-radius: 50%;
   background: none;
   box-shadow: inset 2px 4px 15px rgba(21, 96, 101, 0.6), /* Color más cercano al azul oscuro */
-              0 5px 10px rgba(0, 0, 0, 0.2); /* Sombra externa mucho más leve */
+              0 5px 10px rgba(243, 243, 243, 0.2); /* Sombra externa mucho más leve */
   filter: blur(5px); /* Difumina ligeramente el borde */
   z-index: 1;
   pointer-events: none;
