--- a/src/ui/portal/adminprofile/AdminDashboard.module.css
+++ b/src/ui/portal/adminprofile/AdminDashboard.module.css
@@ -180,7 +180,7 @@
 .uploadInfo h3 {
   margin-bottom: 0.5rem;
 }
-
+/* Comentario */
 .uploadInfo p {
   margin: 0.25rem 0;
   word-break: break-all;
