--- a/src/ui/portal/adminprofile/AdminDashboard.module.css
+++ b/src/ui/portal/adminprofile/AdminDashboard.module.css
@@ -71,7 +71,7 @@
   background-image: none;
   padding-right: 2.5rem;
 }
-
+/* Comentatio */
 .select option {
   background-color: #2a2a2a;
   color: white;
@@ -82,6 +82,7 @@
 }
 
 .uploadButton {
+
   background-color: #361072;
   color: white;
   cursor: pointer;
