--- a/src/ui/portal/adminprofile/AdminDashboard.module.css
+++ b/src/ui/portal/adminprofile/AdminDashboard.module.css
@@ -105,13 +105,39 @@
   border-radius: 5px;
   margin-top: 1rem;
   overflow: hidden;
+  position: relative;
 }
 
 .progressBar {
   height: 100%;
-  background-color: #4a2e76;
-  box-shadow: 0 0 10px #4a2e76, 0 0 20px #4a2e76, 0 0 30px #4a2e76;
+  background-color: #00d1d1;
+  border-radius: 5px;
   transition: width 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.progressBar::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #00d1d1;
+  filter: blur(10px);
+  opacity: 0.7;
+}
+
+.progressBar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #00d1d1;
+  filter: blur(15px);
+  opacity: 0.3;
 }
 
 .playerWrapper {
