--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,51 +16,42 @@
   }
 }
 
-/* global.css */
-* {
-  outline: none;
-  border: none;
-}
-
 body {
-
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-
 }
-
 
 /* Barra de desplazamiento para navegadores WebKit (Chrome, Safari) */
 ::-webkit-scrollbar {
-  width: 12px; /* Ancho de la barra de desplazamiento vertical */
-  height: 12px; /* Altura de la barra de desplazamiento horizontal */
+  width: 12px;
+  height: 12px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Color de fondo de la pista de la barra de desplazamiento */
+  background: #f1f1f1;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #00d1d1; /* Color del "thumb" de la barra de desplazamiento */
+  background: #00d1d1;
   border-radius: 10px;
-  border: 2px solid #d8feff; /* Borde que simula un efecto neón */
+  border: 2px solid #d8feff;
   box-shadow: 0 0 2px #d8feff, 
               inset 0 0 2px #b2e8f1, 
               0 0 4px #00d1d1, 
               0 0 8px #00d1d1, 
-              0 0 12px #00d1d1; /* Efecto de neón en la sombra del thumb */
+              0 0 12px #00d1d1;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #00b2b2; /* Color del "thumb" cuando se pasa el cursor sobre él */
+  background: #00b2b2;
   box-shadow: 0 0 2px #d8feff, 
               inset 0 0 2px #b2e8f1, 
               0 0 4px #00d1d1, 
               0 0 8px #00d1d1, 
-              0 0 12px #00d1d1; /* Mantener el efecto neón en hover */
+              0 0 12px #00d1d1;
 }
 
 /* ROOTLAYOUT */ 
@@ -102,26 +93,6 @@ body {
   justify-content: center;
 }
 
-/* QUITAR FONDO AZUL */ 
-.no-outline:focus {
-  outline: none !important;
-}
-/* Eliminar contorno de enfoque en todos los elementos */
-:focus {
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-/* Eliminar borde azul del enfoque para elementos con tabindex y archivos */
-*[tabindex]:focus-visible, input[type="file"]:focus-visible {
-  outline: none !important;
-  outline-offset: 0rem !important;
-}
-
-/* Alternativamente, para eliminar el borde de todos los elementos enfocados */
-*[tabindex]:focus, input[type="file"]:focus {
-  outline: none !important;
-}
 /* FONDO TODO */
 .auth-background {
   background-image: url('/FONDO.png');
@@ -145,8 +116,8 @@ body {
   background-repeat: no-repeat;
   transform: translateZ(0);
   z-index: -1;
-  filter: blur(2px); /* Ajusta según necesites */
-  opacity: 0.8; /* Para mejorar la suavidad */
+  filter: blur(2px);
+  opacity: 0.8;
 }
 
 @layer utilities {
@@ -158,136 +129,10 @@ body {
 .no-select {
   user-select: none;
 }
+
 .logo-white {
   filter: brightness(0) invert(1);
   z-index: 10;
-}
-
-/* 3D BALL HOME*/
-.stage {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1000px;
-  position: relative;
-}
-
-.ball {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, rgb(59 87 164 / 90%), rgb(47 11 68 / 50%) 40%, rgb(0 225 243 / 30%) 60%, rgb(176 10 196 / 20%) 80%, #000 100%);
-  position: absolute;
-  top: 90px;
-  left: 212px;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-}
-
-.ball-mob {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, rgb(59 87 164 / 90%), rgb(47 11 68 / 50%) 40%, rgb(0 225 243 / 30%) 60%, rgb(176 10 196 / 20%) 80%, #000 100%);
-  position: absolute;
-  top: 135px;
-  left: 37px;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
-  cursor: pointer;
-}
-
-.ball:before {
-  content: "";
-  position: absolute;
-  width: 60%;
-  height: 60%;
-  top: 15%;
-  left: 15%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, rgba(252, 254, 255, 0.8), rgba(252, 254, 255, 0) 70%);
-  filter: blur(10px);
-  opacity: 0.9;
-}
-
-.ball:after {
-  content: "";
-  position: absolute;
-  width: 40%;
-  height: 40%;
-  top: 10%;
-  left: 10%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 30% 30%, rgba(252, 254, 255, 0.5), rgba(252, 254, 255, 0) 60%);
-  filter: blur(5px);
-  opacity: 0.8;
-}
-/* 3D BALL FORM*/
-/* global.css */
-.stageF {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1200px;
-  position: relative;
-  margin: 20px;
-
-}
-
-.ballF {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 50% 50%, #5d0b6c, #4e0a63);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.3); /* Sombra interna para un efecto más profundo */
-  /* overflow: hidden; Asegura que cualquier contenido desbordado sea recortado */
-  z-index: -1; /* Asegura que este contenedor esté detrás de cualquier contenido adicional */
-}
-
-.ballF::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 26% 35%, rgba(159, 42, 186, 1), rgba(245, 171, 228, 0) 38%),
-              radial-gradient(circle at 54% 17%, rgba(159, 42, 186, 1), rgba(245, 171, 228, 0) 21%),
-              radial-gradient(circle at 37% 23%, rgb(225, 192, 236), rgba(245, 171, 228, 0) 28%),
-              radial-gradient(circle at 49% 81%, rgba(159, 42, 186, 1), rgba(235, 172, 220, 0) 15%),
-              radial-gradient(circle at 84% 62%, rgba(159, 42, 186, 1), rgba(235, 172, 220, 0) 13%),
-              radial-gradient(circle at 68% 75%, rgb(213, 156, 232), rgba(235, 172, 220, 0) 21%);
-  background-blend-mode: overlay;
-  filter: blur(31px); /* Aumenta el desenfoque para un brillo más suave */
-  z-index: -1; /* Asegura que el contenido quede detrás de otros elementos */
-}
-
-.ballF::after {
-  content: "";
-  position: absolute;
-  bottom: -10%;
-  left: 50%;
-  width: 200%;
-  height: 50%;
-  border-radius: 50%;
-  background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0) 60%);
-  transform: translateX(-50%) rotateX(90deg);
-  z-index: -1; /* Asegura que la sombra quede debajo del contenido */
-}
-
-.shadowF {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
-  transform: rotateX(90deg) translateZ(-150px);
-  z-index: -1; /* Coloca la sombra detrás de la esfera */
 }
 
 /* SPACEBAR */
@@ -349,9 +194,6 @@ body {
 }
 
 @layer base {
-  * {
-    border: var(--border);
-  }
   body {
     background: var(--background);
     color: var(--foreground);
@@ -375,4 +217,64 @@ body {
   filter: blur(10px);
   z-index: -1;
   transform: scale(1.1);
+}
+/* 3D BALL HOME*/
+.stage {
+  width: 300px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  perspective: 1000px;
+  position: relative;
+}
+
+.ball {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, rgb(59 87 164 / 90%), rgb(47 11 68 / 50%) 40%, rgb(0 225 243 / 30%) 60%, rgb(176 10 196 / 20%) 80%, #000 100%);
+  position: absolute;
+  top: 90px;
+  left: 212px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.ball-mob {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, rgb(59 87 164 / 90%), rgb(47 11 68 / 50%) 40%, rgb(0 225 243 / 30%) 60%, rgb(176 10 196 / 20%) 80%, #000 100%);
+  position: absolute;
+  top: 135px;
+  left: 37px;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.ball:before {
+  content: "";
+  position: absolute;
+  width: 60%;
+  height: 60%;
+  top: 15%;
+  left: 15%;
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, rgba(252, 254, 255, 0.8), rgba(252, 254, 255, 0) 70%);
+  filter: blur(10px);
+  opacity: 0.9;
+}
+
+.ball:after {
+  content: "";
+  position: absolute;
+  width: 40%;
+  height: 40%;
+  top: 10%;
+  left: 10%;
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, rgba(252, 254, 255, 0.5), rgba(252, 254, 255, 0) 60%);
+  filter: blur(5px);
+  opacity: 0.8;
 }
